# crescent-credentials

./: .gitignore  Cargo.toml  Dockerfile  NOTICE.md  README.md  build_all.sh  clean_all.sh  clippy_command.sh  run_experiment.sh  setup_machine.sh
.github/workflows/: CI.yml
circuit_setup/: .gitignore  README.md
circuit_setup/circuits/: main_header_rs256.circom.template  match_claim.circom
circuit_setup/circuits-mdl/: main_header_es256.circom.template  match_claim.circom
circuit_setup/circuits-mdl/nope/bigint/: arith.circom  ecc.circom
circuit_setup/circuits-mdl/nope/crypto/: ECDSA.circom  sha256.circom
circuit_setup/circuits-mdl/nope/js/: constants.js  eccutil.js  master_input_maker.js  util.js
circuit_setup/circuits-mdl/nope/lookup/: rom.cpp
circuit_setup/circuits-mdl/nope/util/: bits.circom  buffer.circom
circuit_setup/circuits/utils/: thermometer.circom
circuit_setup/inputs/mdl1/: config.json  proof_spec.json
circuit_setup/inputs/rs256/: claims.json  config.json  config_honest.json  config_padded.json
circuit_setup/scripts/: gen_mdl_device_key.sh  gen_x509_cert_chain.sh  jwk_gen.py  jwt_sign.py  precompEcdsa.mjs  prepare_mdl_setup.py  prepare_setup.py  run_setup.sh
creds/: .gitignore  Cargo.toml
creds/.cargo/: .config.toml
creds/src/: dlog.rs  lib.rs  main.rs  prep_inputs.rs  structs.rs  wasm_lib.rs
ecdsa-pop/: Cargo.toml
ecdsa-pop/neptune/: Cargo.toml
forks/ark-poly-commit/: Cargo.toml
forks/ark-poly-commit/src/sonic_pc/: data_structures.rs
forks/circom-compat/: Cargo.toml
forks/circom-compat/src/witness/: memory.rs
forks/groth16/: Cargo.toml
forks/halo2curves/: Cargo.toml
forks/halo2curves/src/: lib.rs
sample/: .gitignore  Cargo.toml  clean-sample.sh  setup-sample.sh
sample/client/: package-lock.json  package.json  setup_client.sh
sample/client/src/: cred.ts  verifier.ts
sample/client/src/components/: card.ts
sample/client_helper/: Cargo.toml  setup_client_helper.sh
sample/client_helper/src/: main.rs
sample/issuer/: Cargo.toml  setup_issuer.sh
sample/setup_service/: Cargo.toml
sample/verifier/: Cargo.toml  setup_verifier.sh
sample/verifier/src/: main.rs
