[package]
name = "ecdsa-pop"
version = "0.1.0"
authors = ["Greg Zaverucha <gregz@microsoft.com>"]
edition = "2021"
description = "Proof of knowledge of ECDSA-P256 sigantures suitable in the context of device-bound Crescent credentials "


[dependencies]
spartan-t256 = { path="../forks/Spartan-t256", features=["multicore"]}
bellpepper-core = { version="0.2.0", default-features = false }
bellpepper = { version="0.2.0", default-features = false }
ff = { version = "0.13.0", features = ["derive"] }
#neptune = { version = "13.0.0", default-features = false } # Poseidon.  v13 depends on bellpepper 4.0, but spartan must use 2.0
neptune = {path = './neptune', default-features = false}   # Our fork of neptune that works with bellpepper 2.0
generic-array = "1.0.0"
halo2curves = { version = "0.8.0", features =["derive_serde"]}
merlin = { version = "3.0.0", default-features = false }
hex = "0.4.3"
sha2 = "0.10.7"
num-bigint = {version="0.4.3", features = ["rand"]}
num-traits = "0.2.14"
thiserror = "1.0.39"
ark-std = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rand = ">=0.8.5"
flate2 = { version = "1.0.14" }
num-format = { version = "0.4.3" }

# Enable 'asm' feature only on x86_64 (halo2curves `asm` is x86_64-only; arm64
# falls back to the portable field arithmetic). Original gated on non-wasm.
[target.'cfg(target_arch = "x86_64")'.dependencies]
halo2curves = { version = "0.8.0", features = ["asm"] }

[features]
print-trace = ["ark-std/print-trace"]

[dev-dependencies]
ark-ec = "0.4.2"
ark-secp256r1 = "0.4.0"
ark-ff = "0.4.0"
ark-bn254 = { version = "=0.4.0" }
sha2 = "0.10.8"

#for tests in src/emulated
pasta_curves = { version = "0.5", features = ["repr-c", "serde"] }
