[package]
name = "crescent-sample-client-helper"
version = "0.5.0"
edition = "2021"
default-run = "crescent-sample-client-helper"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
ureq = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
jsonwebkey = { version = "0.3.5", features = ["pkcs-convert"] }
crescent = {path="../../creds"}
sha2 = "0.10.8"
hex = "0.4.3"
base64-url = "3.0"
crescent-sample-setup-service = {path="../setup_service"}
