[package]
name = "crescent-sample-setup-service"
version = "1.0.0"
edition = "2021"
default-run = "crescent-sample-setup-service"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
junction = "1.2.0"
crescent = {path="../../creds"}